# VINS_MONO_Learning

./: .gitignore  README.md
ar_demo/: CMakeLists.txt
camera_model/: CMakeLists.txt
camera_model/src/camera_models/: CameraFactory.cc  PinholeCamera.cc
config/euroc/: euroc_config.yaml
docker/: Dockerfile
feature_tracker/: CMakeLists.txt
feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  parameters.cpp  parameters.h  tic_toc.h
pose_graph/: CMakeLists.txt
pose_graph/src/: keyframe.cpp  keyframe.h  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
pose_graph/src/utility/: CameraPoseVisualization.cpp  utility.cpp
vins_estimator/: CMakeLists.txt
vins_estimator/debug_launch/: euroc_with_estimator.launch  euroc_without_estimator.launch  euroc_without_feature_tracker.launch  euroc_without_pose_graph.launch
vins_estimator/launch/: euroc.launch
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  projection_factor.cpp  projection_td_factor.cpp  projection_td_factor.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
vins_estimator/src/solver/: solve.cpp  solve.h
vins_estimator/src/utility/: utility.cpp  (+3 more)
